Committed as of 11/06 01-27

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Yakap Reseveration Application</string>
+    <string name="buy_tickets">BUY TICKETS</string>
+    <string name="textview">TextView</string>
+    <string name="todo">TODO</string>
+    <string name="vip_3000">VIP 3000</string>
+    <string name="note_the_seating_arrangement_is_on_na_first_come_first_served_basis">Note: The seating arrangement is on \na first come, first served basis</string>
+    <string name="after_purchase_you_will_be_given_a_nqueue_number_and_a_qr_code_for_seat_nnumber_and_purchase_confirmation">After purchase, you will be given a \nqueue number and a QR code for seat\nnumber and purchase confirmation</string>
+    <string name="seat_availability_per_tier_may_vary">Seat availability per tier may vary</string>
+    <string name="lb_2500">LB 2500</string>
+    <string name="upb_2500">UPB 2500</string>
+    <string name="register">REGISTER</string>
 </resources>
